# Sentry---Tata-Innovent

./: .gitignore
backend/: README.md  pyproject.toml
backend/app/: __init__.py  cwru_dataset.py  decision_logic.py  features.py  inference.py  main.py  replay.py
frontend/: components.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  separator.tsx
notebooks/: train_model.ipynb
